About txt fix, about whitespace fixes

--- a/style/_about.scss
+++ b/style/_about.scss
@@ -1,13 +1,17 @@
 #about {
-    height: 1500px;
+    height: 1560px;
     width: 100%;
     
     .about-img-wrapp {
-        height: 250px;
+        height: 280px;
         width: 100%;
-        background: #fff;
+        background:$darkGrey;
         display: flex;
         align-items: flex-start;
+
+        &:nth-child(1) {
+            align-items: flex-end;
+        }
         
         .about-img {
             height: 220px;
@@ -88,7 +92,9 @@
                             font-size: 16px;
                             margin-top: 50px;
                             text-align: center;
+                            line-height: 28px;
                             //line-height: ;
+                            color: #626161;
                         }
 
                         .about-btn {
