--- a/style/_offer.scss
+++ b/style/_offer.scss
@@ -92,7 +92,7 @@
                 p {
                     color: $grey;
                     font-size: 220px;
-                    font-family: 'Dancing Script', cursive;
+                    font-family: 'Lobster', cursive;
                     //position: static;
                     bottom: 80px;
                     z-index: 1;
@@ -102,7 +102,7 @@
                 i {
                     color: $grey;
                     font-size: 220px;
-                    font-family: 'Dancing Script', cursive;
+                    font-family: 'Lobster', cursive;
                     //position: static;
                     bottom: 80px;
                     z-index: 1;
